SERVER-83765 Start up service executors in SessionWorkflow benchmark

GitOrigin-RevId: 8a3c1608227b8a2fd76783a53fb9f75ced1c6ce6